# nargo

./: .git-blame-ignore-revs  .gitignore  Cargo.metadata.json  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  garnix.yaml  justfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: check.yml
crates/nargo-core/: Cargo.toml
crates/nargo-core/src/: env.rs  error.rs  fs.rs  lib.rs  logger.rs  panic.rs  timer.rs  which.rs
crates/nargo-core/src/nargo/: mod.rs
crates/nargo-metadata/: Cargo.toml
crates/nargo-metadata/src/: clean.rs  cli.rs  input.rs  lib.rs  main.rs  output.rs  prefetch.rs  run.rs  timer.rs
crates/nargo-resolve/: Cargo.toml
crates/nargo-resolve/src/: cli.rs  lib.rs  main.rs  resolve.rs  run.rs  unit_graph.rs
crates/nargo-rustc/: Cargo.toml
crates/nargo-rustc/src/: build_script.rs  cli.rs  lib.rs  main.rs  run.rs  semver.rs  shell.rs  target_cfg.rs
just/: nix-build-grind.sh  perf-check-not-paranoid.sh  perf-nix-daemon.sh  samply-nix-and-daemon.sh  samply-nix.sh
lib/: build.nix  buildCrate.nix  buildCustomBuildScript.nix  buildGraph.nix  buildLibCrate.nix  buildPackage.nix  default.nix  generateCargoMetadata.nix  mkMinShell.nix  nargo-metadata.nix  nargo-resolve.nix  nargo-rustc.nix  resolve.nix  targetCfg.nix
lib/jq/: lib.jq
tests/: default.nix  resolve.nix  targetCfg.nix
tests/crater/: default.nix
tests/crater/jq-lib/: lib.jq
tests/examples/: default.nix
tests/examples/cross/: Cargo.toml
tests/examples/cross/build-dep/: Cargo.toml
tests/examples/cross/build-dep/src/: lib.rs
tests/examples/cross/top-level/: Cargo.toml  build.rs
tests/examples/cross/top-level/src/: main.rs
tests/examples/dep-versions/: Cargo.toml
tests/examples/dep-versions/src/: main.rs
tests/examples/dependency-v3/: Cargo.toml
tests/examples/dependency-v3/src/: main.rs
tests/examples/hello-world-bin/: Cargo.toml
tests/examples/pkg-targets/: Cargo.toml
tests/flake/: default.nix  flake.nix
tests/jq/: tests.jq
tests/lib/: default.nix  generateCargoBuildPlan.nix  generateCargoMetadata.nix  mkMinShell.nix  nixprof.nix
