[workspace]
resolver = "2"

members = [
    "crates/nargo-core",
    "crates/nargo-metadata",
    "crates/nargo-resolve",
]

[workspace.package]
authors = [
    "Philip Kannegaard Hayes <philiphayes9@gmail.com>",
]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
assert-json-diff = "2"
pico-args = { version = "0.5", features = ["eq-separator"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

[profile.release]
panic = "abort"
# lto = "thin"
# codegen-units = 1
# strip = true

[profile.dev]
panic = "abort"
