[package]
name = "nargo-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
pico-args = { version = "0.5", features = ["eq-separator"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
