[package]
name = "nargo-metadata"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
nargo-core = { path = "../nargo-core" }

anyhow.workspace = true
lexopt.workspace = true
semver = { version = "1", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
