[package]
name = "nargo-metadata"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
nargo-core = { path = "../nargo-core", features = ["serde"] }

anyhow.workspace = true
lexopt.workspace = true
semver = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
